Opened 4 years ago

Closed 4 years ago

#17023 closed bug (fixed)

CDDB lookup no longer working

Reported by: vidrep Owned by: bga
Priority: normal Milestone: Unscheduled
Component: File Systems/cdda Version: R1/beta2
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

FreeDB was shutdown on March 31, 2020

The new alternative is currently gnudb.gnudb.org:8880

Change History (5)

comment:1 by Coldfirex, 4 years ago

FYI haiku/src/bin/cddb_lookup/cddb_lookup.cpp

Line 69: static const char* kDefaultServerAddress = "freedb.freedb.org:80";

comment:2 by vidrep, 4 years ago

Changes also need to be made to libcddb, which also defaults to Freedb.org. There may be more.

comment:3 by vidrep, 4 years ago

Component: Add-OnsFile Systems/cdda
Owner: changed from nobody to bga

comment:4 by mt, 4 years ago

cddb_lookup fixed in hrev55187 and r1beta3.

comment:5 by vidrep, 4 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.